<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_listTasks">
    <fragment
        android:id="@+id/nav_inventory"
        android:name="ru.energomera.mywarehouse.ui.fragment.inventoryFragment"
        android:label="@string/inventory"
        tools:layout="@layout/fragment_inventory" />
    <fragment
        android:id="@+id/nav_listTasks"
        android:name="ru.energomera.mywarehouse.ui.fragment.ListTasksFragment"
        android:label="@string/listTasks"
        tools:layout="@layout/fragment_list_tasks" />
    <fragment
        android:id="@+id/nav_putFormedItems"
        android:name="ru.energomera.mywarehouse.ui.fragment.putFormedItemsFragment"
        android:label="@string/receipting"
        tools:layout="@layout/fragment_put_formed_items" />
    <fragment
        android:id="@+id/nav_transfer"
        android:name="ru.energomera.mywarehouse.ui.fragment.transferItemFragment"
        android:label="@string/transferItem"
        tools:layout="@layout/fragment_transfer_item" />
    <fragment
        android:id="@+id/nav_putUnformedItems"
        android:name="ru.energomera.mywarehouse.ui.fragment.PutUnformedItemsFragment"
        android:label="@string/unformedProducts"
        tools:layout="@layout/fragment_put_unformed_items" />
    <fragment
        android:id="@+id/nav_postCompItems"
        android:name="ru.energomera.mywarehouse.ui.fragment.PostCompItemsFragment"
        android:label="@string/pickingComp"
        tools:layout="@layout/fragment_post_comp_items" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="ru.energomera.mywarehouse.ui.fragment.SettingsFragment"
        android:label="@string/menu_settings"  />
    <fragment
        android:id="@+id/nav_aboutApp"
        android:name="ru.energomera.mywarehouse.ui.fragment.AboutAppFragment"
        android:label="@string/aboutApp"
        tools:layout="@layout/fragment_about_app" />

</navigation>