<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar_1" />

    <TextView
        android:id="@+id/versionApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/versionApp"
        android:textSize="12sp"
        android:paddingStart="5dp"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintBottom_toTopOf="@id/employeeFIO" />

    <TextView
        android:id="@+id/employeeFIO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/nav_header_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"/>

</androidx.constraintlayout.widget.ConstraintLayout>